--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <p>4x</p>
       <p>8x</p>
     </div>
+    <div>
+    </div>
     <div id='divControls'>
       <input type='number' id='inputBet' min='0' value='0' step = '0.01' />
       <p id='btnBet'>Finalize Bet</p>
